# chaos-playbook-lab

./: .env.template  .gitignore  CONTRIBUTING.md  EXPERIMENTS_GUIDE.md  README.md  SETUP.md  change_log.md  estructura-eng.md  estructura.md  evolution.md  migrate_structure.py  project_content.txt  pyproject.toml  requirements.txt  scan_project.py  update_imports.py
agents/: mvp_train_agent.py  order_agent.py  order_agent_llm.py  petstore_agent copy 2.py  petstore_agent copy 3.py  petstore_agent copy.py  petstore_agent.py
apis/: petstore3_swagger.json
cli/: generate_parametric_plots.py  generate_parametric_report.py  generate_report.py  plot_parametric_results.py  run_adk_showcase.py  run_comparison.py  run_comparison_evaluation.py  run_evaluation.py  run_evaluation_showcase.py  run_scenario.py  run_simulation.py
config/: chaos-agent-config.yaml-old  chaos_config.py  config_loader.py  dev.yaml  presets.yaml  prod.yaml  settings.py
core/: chaos_proxy copy.py  chaos_proxy.py
data/: chaos_playbook.json  http_error_codes.json  playbook-aggressive.json  playbook-conservative.json  playbook_petstore_aggressive.json  playbook_petstore_baseline.json  playbook_petstore_default.json  playbook_petstore_no_retries.json  playbook_training.json
docs/: ADRs.md  ARCHITECTURE.md  CAPSTONE_NARRATIVE.md  CODE_WIKI.md  CONTRIBUTING.md  Capstone-Architecture-v3-Final.md  Capstone-Architecture-v3.0.md  Capstone-Pitch-Updated.md  Capstone-Plan-v3-Final.md  Capstone-Requirements-v3.md  GENERAL_REPORT_es.md  INNOVATION.md  LESSONS_LEARNED.md  PROJECT_REPORT.md  SCIENTIFIC_REPORT.md  (+3 more)
(+180 files in other folders)
